fix: added back spacing

--- a/src/style.css
+++ b/src/style.css
@@ -403,7 +403,7 @@ section.home {
         "line"
         "title2";
     justify-items: center;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
 }
 .home .wrapper div svg {
     width: 200px;
